...
    }

    private func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let viewModel = QuizResult(
                title: "Этот раунд окончен!",
                text: makeResultsMessage(),
                buttonText: "Сыграть ещё раз",
                correct: correctAnswers,
                total: questionsAmount
            )
            viewController?.show(quiz: viewModel)
...
